[gd_scene load_steps=14 format=3 uid="uid://6ip7x31517er"]

[ext_resource type="Script" path="res://Scripts/Enemies/enemy.gd" id="1_7w4eh"]
[ext_resource type="Texture2D" uid="uid://bljlhru6fbc7t" path="res://images/rat_run.png" id="2_yu17j"]
[ext_resource type="Texture2D" uid="uid://dvelc1brkk1lq" path="res://images/Ratstanding.png" id="3_qrc2m"]
[ext_resource type="Texture2D" uid="uid://b060akbuv0brt" path="res://images/health bar sprite empty.png" id="4_imnhr"]
[ext_resource type="Texture2D" uid="uid://b8wh2s4xu68y7" path="res://images/SingleRow.png" id="5_t66ht"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wk8k2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_e0rie"]
atlas = ExtResource("2_yu17j")
region = Rect2(0, 0, 92, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iykrc"]
atlas = ExtResource("2_yu17j")
region = Rect2(92, 0, 92, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdsco"]
atlas = ExtResource("2_yu17j")
region = Rect2(184, 0, 92, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_osb3u"]
atlas = ExtResource("2_yu17j")
region = Rect2(276, 0, 92, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sro2q"]
atlas = ExtResource("3_qrc2m")
region = Rect2(0, 0, 63, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_42n1k"]
animations = [{
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_e0rie")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_iykrc")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_mdsco")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_osb3u")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sro2q")
}],
"loop": true,
"name": &"stand",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_e0rie")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_iykrc")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_mdsco")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_osb3u")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xb3p1"]
size = Vector2(65, 72)

[node name="CharacterBody2D3" type="CharacterBody2D" groups=["Enemies"]]
z_index = 1
collision_layer = 2
motion_mode = 1
script = ExtResource("1_7w4eh")
health = 15
base_speed = 300.0
damage = 3.0
type = "Rat"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 7)
scale = Vector2(2.62049, 1.74327)
shape = SubResource("CircleShape2D_wk8k2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_42n1k")
animation = &"walk"

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(5, 8)
scale = Vector2(1.04, 0.64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(-1.5, -1)
shape = SubResource("RectangleShape2D_xb3p1")

[node name="Detection" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Detection"]
polygon = PackedVector2Array(-20, 29, 31, 71, 960, 127, 969, -95, 27, -64, -23, -21)

[node name="AttackTimer" type="Timer" parent="."]

[node name="DartTimer" type="Timer" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
simplify_path = true
avoidance_enabled = true
radius = 111.01
avoidance_layers = 2

[node name="NavTimer" type="Timer" parent="."]
autostart = true

[node name="HealthContainer" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(-4, -52)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_imnhr")

[node name="HealthBar" type="TextureProgressBar" parent="HealthContainer"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.941
offset_left = -95.0
offset_top = -15.0
offset_right = -99.0
offset_bottom = -16.994
value = 100.0
texture_progress = ExtResource("5_t66ht")
tint_over = Color(1, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="IFramesTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="AttackArea" to="." method="_on_attack_area_area_entered"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="body_entered" from="Detection" to="." method="_on_detection_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="DartTimer" to="." method="_on_dart_timer_timeout"]
[connection signal="timeout" from="NavTimer" to="." method="_on_nav_timer_timeout"]
[connection signal="timeout" from="IFramesTimer" to="." method="_on_i_frames_timer_timeout"]
